feat: Initialize LoomGate server, establish custom exception hierarchy, and detail project architecture in README.